[package]
name = "kornia-paligemma"
categories = ["computer-vision", "science::robotics"]
description = "Rust implementation of Google Paligemma vision language model"
edition = "2024"
homepage = "http://kornia.org"
include = ["Cargo.toml"]
license = "Apache-2.0"
repository = "https://github.com/kornia/kornia-paligemma"
rust-version = "1.85"
version = "0.1.0"

[dependencies]
candle-core = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
candle-examples = "0.9.1"
candle-nn = { version = "0.9.1" }
hf-hub = "0.4.2"
kornia-image = "0.1.9"
kornia-imgproc = "0.1.9"
log = "0.4"
serde_json = "1"
tokenizers = "0.21.1"
thiserror = "2"

[features]
cuda = ["candle-core/cuda", "candle-transformers/cuda", "candle-nn/cuda"]

[dev-dependencies]
argh = "0.1"